--- a/Results/3.3_clustering-based_validation.ipynb
+++ b/Results/3.3_clustering-based_validation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 134,
    "id": "26fada6b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 135,
    "id": "9d53f5df",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 136,
    "id": "7eaa4aa9",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 137,
    "id": "db253935",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 138,
    "id": "ec38f425",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 139,
    "id": "1addaeee",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 140,
    "id": "86896505",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 141,
    "id": "0f4bc06c",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 142,
    "id": "8fa7bc70",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 143,
    "id": "10247a19",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 144,
    "id": "d3bdd277",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 145,
    "id": "aadd590b",
    "metadata": {},
    "outputs": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 146,
    "id": "594a1d21",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 147,
    "id": "36c43594",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 148,
    "id": "5a3f2f8f",
    "metadata": {},
    "outputs": [],
@@ -482,59 +482,6 @@
     "    {\"model_name\": \"models/text-embedding-004\"}, \n",
     "    {\"model_name\": \"voyage-2\"}, \n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "fd66ef4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tuffery_ref = \"../Embeddings/TUFFERY_REF\"\n",
-    "style_ref = \"../Embeddings/STYLE_REF\"\n",
-    "style_gen = \"../Embeddings/STYLE_GEN\"\n",
-    "\n",
-    "# Get all filenames (without folder paths) in folder1\n",
-    "files_tuffery_ref = {os.path.basename(f) for f in os.listdir(tuffery_ref) if f.endswith(\".pkl\")}\n",
-    "\n",
-    "# Gather all subfolders inside folder2 and folder3\n",
-    "subfolders_style_ref = [os.path.join(style_ref, d) for d in os.listdir(style_ref) if os.path.isdir(os.path.join(style_ref, d))]\n",
-    "subfolders_style_gen = [os.path.join(style_gen, d) for d in os.listdir(style_gen) if os.path.isdir(os.path.join(style_gen, d))]\n",
-    "\n",
-    "triplets = []\n",
-    "\n",
-    "for fname in files_tuffery_ref:\n",
-    "    file1_path = os.path.join(tuffery_ref, fname)\n",
-    "\n",
-    "    # Check which subfolders contain the same file name\n",
-    "    matching2 = [os.path.join(sf, fname) for sf in subfolders_style_ref if os.path.exists(os.path.join(sf, fname))]\n",
-    "    matching3 = [os.path.join(sf, fname) for sf in subfolders_style_gen if os.path.exists(os.path.join(sf, fname))]\n",
-    "\n",
-    "    # Combine all matching pairs\n",
-    "    for f2, f3 in product(matching2, matching3):\n",
-    "        triplets.append((file1_path, f2, f3))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "id": "afdf83b4",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_items([('Tuffery', 'TUFFERY_REF'), ('Proust', 'STYLE_REF/PROUST_REF'), ('Celine', 'STYLE_REF/CELINE_REF'), ('Yourcenar', 'STYLE_REF/YOURCENAR_REF'), ('Proust_mistral', 'STYLE_GEN/PROUST_MISTRAL_GEN'), ('Celine_mistral', 'STYLE_GEN/CELINE_MISTRAL_GEN'), ('Yourcenar_mistral', 'STYLE_GEN/YOURCENAR_MISTRAL_GEN'), ('Proust_gemini', 'STYLE_GEN/PROUST_GEMINI_GEN'), ('Celine_gemini', 'STYLE_GEN/CELINE_GEMINI_GEN'), ('Yourcenar_gemini', 'STYLE_GEN/YOURCENAR_GEMINI_GEN'), ('Proust_gpt', 'STYLE_GEN/PROUST_GPT_GEN'), ('Celine_gpt', 'STYLE_GEN/CELINE_GPT_GEN'), ('Yourcenar_gpt', 'STYLE_GEN/YOURCENAR_GPT_GEN')])"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset_folders.items()"
    ]
   },
   {
@@ -560,6 +507,7 @@
     "            tuffery_folder = f\"../Embeddings/TUFFERY_REF\"\n",
     "            style_ref_folder = f\"../Embeddings/STYLE_REF/{author.upper()}_REF\"\n",
     "            style_gen_folder = f\"../Embeddings/STYLE_GEN/{author.upper()}_{gen_ai.upper()}_GEN\"\n",
+    "\n",
     "            # for class_name, folder in :\n",
     "            safe_model_name = model_name.replace('/', '_').replace('\\\\', '_')\n",
     "            embeddings_dir_tuffery = os.path.join(base_path, tuffery_folder, f\"{safe_model_name}_embeddings.pkl\")\n",
@@ -587,20 +535,18 @@
     "            # FullD\n",
     "            cluster_and_evaluate(embeddings_scaled, group_labels, 'FullD', 'FullD', model_name, results)\n",
     "\n",
-    "            for dim in [2, 3, 5, 10]:\n",
-    "                umpa_reducer = umap.UMAP(n_components=dim)\n",
+    "            for dim in [2, 3, 10]:\n",
+    "                umpa_reducer = umap.UMAP(n_components=dim, random_state=156, n_jobs=1)\n",
     "                embeddings_umap = umpa_reducer.fit_transform(embeddings_scaled)\n",
     "                cluster_and_evaluate(embeddings_umap, group_labels, f'{dim}D UMAP', dim, model_name, results)    \n",
     "                \n",
     "            # Append current model results to all results\n",
-    "            all_results.extend(results)\n",
-    "\n",
-    "## Change all_results pour faire la moyenne sur chaque boucle auteurs"
+    "            all_results.extend(results)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 152,
    "id": "b6c775d5",
    "metadata": {},
    "outputs": [
@@ -634,38 +580,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>mistral-embed</td>\n",
-       "      <td>FullD</td>\n",
-       "      <td>FullD</td>\n",
-       "      <td>0.197917</td>\n",
+       "      <td>FacebookAI/xlm-roberta-large</td>\n",
+       "      <td>10D UMAP</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.747299</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>mistral-embed</td>\n",
+       "      <td>FacebookAI/xlm-roberta-large</td>\n",
        "      <td>2D UMAP</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.081731</td>\n",
+       "      <td>0.747299</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>mistral-embed</td>\n",
+       "      <td>FacebookAI/xlm-roberta-large</td>\n",
        "      <td>3D UMAP</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.091346</td>\n",
+       "      <td>0.756173</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>mistral-embed</td>\n",
+       "      <td>FacebookAI/xlm-roberta-large</td>\n",
        "      <td>5D UMAP</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.157853</td>\n",
+       "      <td>0.758873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>mistral-embed</td>\n",
-       "      <td>10D UMAP</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.162660</td>\n",
+       "      <td>FacebookAI/xlm-roberta-large</td>\n",
+       "      <td>FullD</td>\n",
+       "      <td>FullD</td>\n",
+       "      <td>0.765432</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -677,37 +623,37 @@
        "    <tr>\n",
        "      <th>60</th>\n",
        "      <td>voyage-2</td>\n",
-       "      <td>FullD</td>\n",
-       "      <td>FullD</td>\n",
-       "      <td>0.204327</td>\n",
+       "      <td>10D UMAP</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.667052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61</th>\n",
        "      <td>voyage-2</td>\n",
        "      <td>2D UMAP</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.169872</td>\n",
+       "      <td>0.672840</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62</th>\n",
        "      <td>voyage-2</td>\n",
        "      <td>3D UMAP</td>\n",
        "      <td>3</td>\n",
-       "      <td>0.150641</td>\n",
+       "      <td>0.677855</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>63</th>\n",
        "      <td>voyage-2</td>\n",
        "      <td>5D UMAP</td>\n",
        "      <td>5</td>\n",
-       "      <td>0.154647</td>\n",
+       "      <td>0.684799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>64</th>\n",
        "      <td>voyage-2</td>\n",
-       "      <td>10D UMAP</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.125801</td>\n",
+       "      <td>FullD</td>\n",
+       "      <td>FullD</td>\n",
+       "      <td>0.649306</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -715,37 +661,39 @@
        "</div>"
       ],
       "text/plain": [
-       "            Model    Method Dimensionality    Purity\n",
-       "0   mistral-embed     FullD          FullD  0.197917\n",
-       "1   mistral-embed   2D UMAP              2  0.081731\n",
-       "2   mistral-embed   3D UMAP              3  0.091346\n",
-       "3   mistral-embed   5D UMAP              5  0.157853\n",
-       "4   mistral-embed  10D UMAP             10  0.162660\n",
-       "..            ...       ...            ...       ...\n",
-       "60       voyage-2     FullD          FullD  0.204327\n",
-       "61       voyage-2   2D UMAP              2  0.169872\n",
-       "62       voyage-2   3D UMAP              3  0.150641\n",
-       "63       voyage-2   5D UMAP              5  0.154647\n",
-       "64       voyage-2  10D UMAP             10  0.125801\n",
+       "                           Model    Method Dimensionality    Purity\n",
+       "0   FacebookAI/xlm-roberta-large  10D UMAP             10  0.747299\n",
+       "1   FacebookAI/xlm-roberta-large   2D UMAP              2  0.747299\n",
+       "2   FacebookAI/xlm-roberta-large   3D UMAP              3  0.756173\n",
+       "3   FacebookAI/xlm-roberta-large   5D UMAP              5  0.758873\n",
+       "4   FacebookAI/xlm-roberta-large     FullD          FullD  0.765432\n",
+       "..                           ...       ...            ...       ...\n",
+       "60                      voyage-2  10D UMAP             10  0.667052\n",
+       "61                      voyage-2   2D UMAP              2  0.672840\n",
+       "62                      voyage-2   3D UMAP              3  0.677855\n",
+       "63                      voyage-2   5D UMAP              5  0.684799\n",
+       "64                      voyage-2     FullD          FullD  0.649306\n",
        "\n",
        "[65 rows x 4 columns]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a DataFrame to store all results\n",
-    "all_results_df = pd.DataFrame(all_results, columns=['Model', 'Method', 'Dimensionality', 'Purity'])\n",
+    "_all_results_df = pd.DataFrame(all_results, columns=['Model', 'Method', 'Dimensionality', 'Purity'])\n",
+    "\n",
+    "all_results_df = _all_results_df.groupby([\"Model\", \"Method\", \"Dimensionality\"], as_index=False)[\"Purity\"].mean()\n",
     "\n",
     "all_results_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "c938b6fd",
    "metadata": {},
    "outputs": [
@@ -755,11 +703,11 @@
      "text": [
       "Median Purity per Method:\n",
       "     Method  Median Purity\n",
-      "0  10D UMAP       0.145833\n",
-      "2   3D UMAP       0.145833\n",
-      "1   2D UMAP       0.149840\n",
-      "3   5D UMAP       0.153846\n",
-      "4     FullD       0.170673\n"
+      "4     FullD       0.653935\n",
+      "0  10D UMAP       0.674383\n",
+      "2   3D UMAP       0.682485\n",
+      "3   5D UMAP       0.682870\n",
+      "1   2D UMAP       0.692901\n"
      ]
     }
    ],
