--- a/Results/4.2_vectors_sensitivity_to_human_style.ipynb
+++ b/Results/4.2_vectors_sensitivity_to_human_style.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {
     "executionInfo": {
      "elapsed": 1,
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {
     "executionInfo": {
      "elapsed": 43,
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {
     "executionInfo": {
      "elapsed": 1,
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {
     "executionInfo": {
      "elapsed": 1,
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {
     "executionInfo": {
      "elapsed": 2,
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {
     "executionInfo": {
      "elapsed": 186,
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {
     "executionInfo": {
      "elapsed": 44,
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -419,7 +419,7 @@
        "964  1.000000  0.031382        4                   tuffery_anaphore.txt    A1  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "Mean        0.181922  0.246068  0.166385   0.206961"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {
     "executionInfo": {
      "elapsed": 63,
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -771,7 +771,7 @@
        "4           4                     1.759076    No  Tuffery    A1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {
     "executionInfo": {
      "elapsed": 52,
@@ -807,35 +807,33 @@
    },
    "outputs": [],
    "source": [
-    "#### DISPERSION DELTA ANALYSIS FOR 2 COMPARISONS\n",
     "\n",
-    "# Dispersion delta\n",
     "Tuffery_distances = mean_distances_df[mean_distances_df['author'] == 'Tuffery']['Mean_Distance_From_Centroid'].values\n",
     "\n",
     "GenAI_distances = {}\n",
     "difference_df_cond1 = {}\n",
     "\n",
-    "for auteur in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
-    "    GenAI_distances[auteur] = mean_distances_df[mean_distances_df['author'] == auteur]['Mean_Distance_From_Centroid'].values\n",
-    "    # List to store the results\n",
+    "for author in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
+    "    GenAI_distances[author] = mean_distances_df[mean_distances_df['author'] == author]['Mean_Distance_From_Centroid'].values\n",
+    "\n",
     "    difference_results = []\n",
     "\n",
     "    for i, ref_dist in enumerate(Tuffery_distances):\n",
-    "        for j, gen_dist in enumerate(GenAI_distances[auteur]):\n",
+    "        for j, gen_dist in enumerate(GenAI_distances[author]):\n",
     "            difference = ref_dist - gen_dist\n",
     "            difference_results.append({\n",
     "                'Tuffery_Index': i,\n",
-    "                f'{auteur}_Index': j,\n",
+    "                f'{author}_Index': j,\n",
     "                'Difference': difference\n",
     "            })\n",
     "\n",
-    "    difference_df_cond1[auteur] = pd.DataFrame(difference_results)\n",
+    "    difference_df_cond1[author] = pd.DataFrame(difference_results)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {
     "executionInfo": {
      "elapsed": 95,
@@ -851,39 +849,34 @@
    },
    "outputs": [],
    "source": [
-    "# Style delta calculation\n",
-    "\n",
     "Tuffery_df = stylo_df[stylo_df['author'] == 'Tuffery']\n",
     "\n",
     "GenAI_stylo = {}\n",
     "difference_df_stylo_cond1 = {}\n",
     "\n",
-    "# List of stylistic features\n",
-    "# features = ['Function words', 'Letters', 'Numbers', 'TAG', 'NER', 'Structural', 'Punctuation', 'Entropy']\n",
     "features = ['Mean']\n",
     "\n",
-    "for auteur in [\"Celine\", \"Proust\", \"Yourcenar\"]:\n",
-    "    GenAI_stylo[auteur] = stylo_df[stylo_df['author'] == auteur]\n",
+    "for author in [\"Celine\", \"Proust\", \"Yourcenar\"]:\n",
+    "    GenAI_stylo[author] = stylo_df[stylo_df['author'] == author]\n",
     "\n",
-    "    # List to store the results\n",
     "    difference_results_stylo = []\n",
     "\n",
     "    for feature in features:\n",
     "        for i, ref_val in enumerate(Tuffery_df[feature].values):\n",
-    "            for j, gen_val in enumerate(GenAI_stylo[auteur][feature].values):\n",
+    "            for j, gen_val in enumerate(GenAI_stylo[author][feature].values):\n",
     "                difference = ref_val - gen_val\n",
     "                difference_results_stylo.append({\n",
     "                    'Feature': feature,\n",
     "                    'Mistral_Index': i,\n",
-    "                    f'{auteur}_Index': j,\n",
+    "                    f'{author}_Index': j,\n",
     "                    'Difference': difference\n",
     "                })\n",
-    "    difference_df_stylo_cond1[auteur] = pd.DataFrame(difference_results_stylo)\n"
+    "    difference_df_stylo_cond1[author] = pd.DataFrame(difference_results_stylo)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -919,11 +912,11 @@
     }
    ],
    "source": [
-    "for auteur in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
+    "for author in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
     "\n",
-    "    correlation_df_cond1 = calculate_correlations_with_significance(difference_df_stylo_cond1[auteur], difference_df_cond1[auteur])\n",
+    "    correlation_df_cond1 = calculate_correlations_with_significance(difference_df_stylo_cond1[author], difference_df_cond1[author])\n",
     "\n",
-    "    print(f\"{auteur}\")\n",
+    "    print(f\"{author}\")\n",
     "    print(correlation_df_cond1.to_string())"
    ]
   },
@@ -938,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {
     "executionInfo": {
      "elapsed": 96,
@@ -954,40 +947,33 @@
    },
    "outputs": [],
    "source": [
-    "#### DISPERSION DELTA ANALYSIS FOR 2 COMPARISONS\n",
-    "\n",
-    "\n",
-    "## Humans vs genAI\n",
-    "\n",
-    "# Dispersion delta\n",
     "Tuffery_distances = mean_distances_df[mean_distances_df['author'] == 'Tuffery']['Mean_Distance_From_Centroid'].values\n",
     "\n",
     "GenAI_distances = {}\n",
     "difference_df_cond1 = {}\n",
     "\n",
     "\n",
-    "for auteur in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
-    "    GenAI_distances[auteur] = mean_distances_df[mean_distances_df['author'] == auteur]['Mean_Distance_From_Centroid'].values\n",
+    "for author in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
+    "    GenAI_distances[author] = mean_distances_df[mean_distances_df['author'] == author]['Mean_Distance_From_Centroid'].values\n",
     "\n",
-    "    # List to store the results\n",
     "    difference_results = []\n",
     "\n",
     "    for i, ref_dist in enumerate(Tuffery_distances):\n",
-    "        for j, gen_dist in enumerate(GenAI_distances[auteur]):\n",
+    "        for j, gen_dist in enumerate(GenAI_distances[author]):\n",
     "            difference = ref_dist - gen_dist\n",
     "            difference_results.append({\n",
     "                'Tuffery_Index': i,\n",
-    "                f'{auteur}_Index': j,\n",
+    "                f'{author}_Index': j,\n",
     "                'Difference': difference\n",
     "            })\n",
     "\n",
-    "    difference_df_cond1[auteur] = pd.DataFrame(difference_results)\n",
+    "    difference_df_cond1[author] = pd.DataFrame(difference_results)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {
     "executionInfo": {
      "elapsed": 337,
@@ -1003,40 +989,34 @@
    },
    "outputs": [],
    "source": [
-    "# Style delta calculation\n",
-    "\n",
     "Tuffery_df = stylo_df[stylo_df['author'] == 'Tuffery']\n",
     "\n",
     "GenAI_stylo = {}\n",
     "difference_df_stylo_cond1 = {}\n",
     "\n",
-    "# List of stylistic features\n",
-    "#features = ['Function words', 'Letters', 'Numbers', 'TAG', 'NER', 'Structural', 'Punctuation', 'Indexes']\n",
     "features = ['Letters', 'TAG', 'NER', 'Structural', 'Entropy']\n",
-    "# features = ['Mean']\n",
     "\n",
-    "for auteur in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
-    "    GenAI_stylo[auteur] = stylo_df[stylo_df['author'] == auteur]\n",
+    "for author in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
+    "    GenAI_stylo[author] = stylo_df[stylo_df['author'] == author]\n",
     "\n",
-    "    # List to store the results\n",
     "    difference_results_stylo = []\n",
     "\n",
     "    for feature in features:\n",
     "        for i, ref_val in enumerate(Tuffery_df[feature].values):\n",
-    "            for j, gen_val in enumerate(GenAI_stylo[auteur][feature].values):\n",
+    "            for j, gen_val in enumerate(GenAI_stylo[author][feature].values):\n",
     "                difference = ref_val - gen_val\n",
     "                difference_results_stylo.append({\n",
     "                    'Feature': feature,\n",
     "                    'Mistral_Index': i,\n",
-    "                    f'{auteur}_Index': j,\n",
+    "                    f'{author}_Index': j,\n",
     "                    'Difference': difference\n",
     "                })\n",
-    "    difference_df_stylo_cond1[auteur] = pd.DataFrame(difference_results_stylo)"
+    "    difference_df_stylo_cond1[author] = pd.DataFrame(difference_results_stylo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1090,11 +1070,11 @@
     }
    ],
    "source": [
-    "for auteur in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
+    "for author in [\"Proust\", \"Celine\", \"Yourcenar\"]:\n",
     "\n",
-    "    correlation_df_cond1 = calculate_correlations_with_significance(difference_df_stylo_cond1[auteur], difference_df_cond1[auteur])\n",
+    "    correlation_df_cond1 = calculate_correlations_with_significance(difference_df_stylo_cond1[author], difference_df_cond1[author])\n",
     "\n",
-    "    print(f\"\\n{auteur}\\n\")\n",
+    "    print(f\"\\n{author}\\n\")\n",
     "    print(correlation_df_cond1.to_string())"
    ]
   }
