--- a/Results/3.3_clustering-based_validation.ipynb
+++ b/Results/3.3_clustering-based_validation.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "26fada6b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/sainero/.conda/envs/style/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -23,11 +14,10 @@
     "import pickle\n",
     "import pandas as pd\n",
     "from matplotlib.patches import Ellipse\n",
+    "from matplotlib.colors import ListedColormap\n",
     "from scipy.stats import chi2\n",
     "from sklearn.cluster import KMeans\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "from itertools import product"
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -203,19 +193,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "10247a19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib.colors import ListedColormap\n",
-    "# my_colors = {\"0\":\"black\", \"1\":\"grey\", \"2\":\"lightgrey\"}\n",
+    "\n",
     "my_colors = [\"black\",\"grey\",\"lightgrey\"]\n",
-    "cmap = ListedColormap(my_colors)\n",
-    "\n",
-    "\n",
-    "import matplotlib.patches as mpatches\n",
-    "from matplotlib.lines import Line2D"
+    "cmap = ListedColormap(my_colors)"
    ]
   },
   {
