--- a/Results/4.2_embedding_sensitivity_to_authorial_style.ipynb
+++ b/Results/4.2_embedding_sensitivity_to_authorial_style.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 1,
@@ -142,9 +142,7 @@
     "  se = np.sqrt(1/(n1 - 3) + 1/(n2 - 3))\n",
     "  z = np.abs(z1 - z2) / se\n",
     "  p = 2 * (1 - norm.cdf(z)) # two-tailed\n",
-    "  return z, p\n",
-    "# Example usage:\n",
-    "# z_score, p_value = compare_correlations(0.65, 96, 0.45, 96)"
+    "  return z, p"
    ]
   },
   {
@@ -741,6 +739,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we compute the unadjusted p-values (before applying Bonferroni correction)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {
@@ -873,11 +878,25 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*(unadjusted p-values (before applying Bonferroni correction))*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "LHfTG1A50onT"
    },
    "source": [
     "## Per feature, per author : correlation, p-value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we compute the unadjusted p-values (before applying Bonferroni correction)."
    ]
   },
   {
@@ -1027,6 +1046,13 @@
     "\n",
     "    print(f\"\\n{author}\\n\")\n",
     "    print(correlation_df_cond1.to_string())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*(unadjusted p-values (before applying Bonferroni correction))*"
    ]
   }
  ],
