--- a/Results/4.3_sensitivity_after_LLM-based_rewriting.ipynb
+++ b/Results/4.3_sensitivity_after_LLM-based_rewriting.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "6qyI7i4fU1z5"
    },
@@ -661,6 +661,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we compute the unadjusted p-values (before applying Bonferroni correction)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
@@ -808,7 +815,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*(unadjusted p-values (before applying Bonferroni correction))*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Per feature, per author, all genAI : correlation, p-value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we compute the unadjusted p-values (before applying Bonferroni correction)."
    ]
   },
   {
@@ -925,6 +946,13 @@
     "    print(f\"\\n {author}\\n \")\n",
     "    print(correlation_df_cond1.to_string())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*(unadjusted p-values (before applying Bonferroni correction))*"
+   ]
   }
  ],
  "metadata": {
@@ -939,7 +967,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "style",
+   "display_name": "style_new",
    "language": "python",
    "name": "python3"
   },
@@ -953,7 +981,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.14.3"
   }
  },
  "nbformat": 4,
